// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaseElement operator changes should handle updates 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="kase has_phone"
        data-draggable="true"
      >
        <span
          class="fe-chevrons-expand dnd_icon"
          data-draggable="true"
        />
        <div
          class="choice"
        >
          <div
            class="small "
          >
            <temba-select
              data-testid="temba_select_operator"
              errors="[]"
              expressions=""
              name="operator"
              namekey="verboseName"
              valuekey="type"
              values="[{\\"type\\":\\"has_phone\\",\\"verboseName\\":\\"has a phone number\\",\\"operands\\":0,\\"categoryName\\":\\"Has Phone\\"}]"
            />
          </div>
        </div>
        <div
          class="single_operand"
        />
        <div
          class="categorize_as"
          data-draggable="true"
        >
          categorize as
        </div>
        <div
          class="category"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper small"
            >
              <input
                data-testid="Exit Name"
                name="Exit Name"
                value="Has Phone"
              />
            </div>
          </div>
        </div>
        <span
          class="fe-x remove_icon"
          data-testid="remove-case-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`CaseElement operator changes should should set arguments for numeric range 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="kase has_number_between"
        data-draggable="true"
      >
        <span
          class="fe-chevrons-expand dnd_icon"
          data-draggable="true"
        />
        <div
          class="choice"
        >
          <div
            class="small "
          >
            <temba-select
              data-testid="temba_select_operator"
              errors="[]"
              expressions=""
              name="operator"
              namekey="verboseName"
              valuekey="type"
              values="[{\\"type\\":\\"has_number_between\\",\\"verboseName\\":\\"has a number between\\",\\"operands\\":2}]"
            />
          </div>
        </div>
        <div
          class="multi_operand"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper small"
            >
              <input
                data-testid="arguments"
                name="arguments"
                value=""
              />
            </div>
          </div>
          <span
            class="divider"
            data-draggable="true"
          >
            and
          </span>
          <div
            class="ele"
          >
            <div
              class="wrapper small"
            >
              <input
                data-testid="arguments"
                name="arguments"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="categorize_as"
          data-draggable="true"
        >
          categorize as
        </div>
        <div
          class="category"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper small"
            >
              <input
                data-testid="Exit Name"
                name="Exit Name"
                value=""
              />
            </div>
          </div>
        </div>
        <span
          class="fe-x remove_icon"
          data-testid="remove-case-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`CaseElement operator changes shouldnt update exit if it has been edited 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="kase has_number"
        data-draggable="true"
      >
        <span
          class="fe-chevrons-expand dnd_icon"
          data-draggable="true"
        />
        <div
          class="choice"
        >
          <div
            class="small "
          >
            <temba-select
              data-testid="temba_select_operator"
              errors="[]"
              expressions=""
              name="operator"
              namekey="verboseName"
              valuekey="type"
              values="[{\\"type\\":\\"has_number\\",\\"verboseName\\":\\"has a number\\",\\"operands\\":0,\\"categoryName\\":\\"Has Number\\"}]"
            />
          </div>
        </div>
        <div
          class="single_operand"
        />
        <div
          class="categorize_as"
          data-draggable="true"
        >
          categorize as
        </div>
        <div
          class="category"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper small"
            >
              <input
                data-testid="Exit Name"
                name="Exit Name"
                value="My Exit Name"
              />
            </div>
          </div>
        </div>
        <span
          class="fe-x remove_icon"
          data-testid="remove-case-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`CaseElement render renders no argument rules 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="kase has_number"
        data-draggable="true"
      >
        <span
          class="fe-chevrons-expand dnd_icon"
          data-draggable="true"
        />
        <div
          class="choice"
        >
          <div
            class="small "
          >
            <temba-select
              data-testid="temba_select_operator"
              errors="[]"
              expressions=""
              name="operator"
              namekey="verboseName"
              valuekey="type"
              values="[{\\"type\\":\\"has_number\\",\\"verboseName\\":\\"has a number\\",\\"operands\\":0,\\"categoryName\\":\\"Has Number\\"}]"
            />
          </div>
        </div>
        <div
          class="single_operand"
        />
        <div
          class="categorize_as"
          data-draggable="true"
        >
          categorize as
        </div>
        <div
          class="category"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper small"
            >
              <input
                data-testid="Exit Name"
                name="Exit Name"
                value="Has Number"
              />
            </div>
          </div>
        </div>
        <span
          class="fe-x remove_icon"
          data-testid="remove-case-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`CaseElement render should render empty case 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="kase has_any_word"
        data-draggable="true"
      >
        <span
          class="fe-chevrons-expand dnd_icon"
          data-draggable="true"
        />
        <div
          class="choice"
        >
          <div
            class="small "
          >
            <temba-select
              data-testid="temba_select_operator"
              errors="[]"
              expressions=""
              name="operator"
              namekey="verboseName"
              valuekey="type"
              values="[{\\"type\\":\\"has_any_word\\",\\"verboseName\\":\\"has any of the words\\",\\"operands\\":1}]"
            />
          </div>
        </div>
        <div
          class="single_operand"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper small"
            >
              <input
                data-testid="arguments"
                name="arguments"
                placeholder=""
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="categorize_as"
          data-draggable="true"
        >
          categorize as
        </div>
        <div
          class="category"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper small"
            >
              <input
                data-testid="Exit Name"
                name="Exit Name"
                value=""
              />
            </div>
          </div>
        </div>
        <span
          class="fe-x remove_icon"
          data-testid="remove-case-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`CaseElement update handles argument change 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="kase has_any_word"
        data-draggable="true"
      >
        <span
          class="fe-chevrons-expand dnd_icon"
          data-draggable="true"
        />
        <div
          class="choice"
        >
          <div
            class="small "
          >
            <temba-select
              data-testid="temba_select_operator"
              errors="[]"
              expressions=""
              name="operator"
              namekey="verboseName"
              valuekey="type"
              values="[{\\"type\\":\\"has_any_word\\",\\"verboseName\\":\\"has any of the words\\",\\"operands\\":1}]"
            />
          </div>
        </div>
        <div
          class="single_operand"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper small"
            >
              <input
                data-testid="arguments"
                name="arguments"
                placeholder=""
                value="Purple, p"
              />
            </div>
          </div>
        </div>
        <div
          class="categorize_as"
          data-draggable="true"
        >
          categorize as
        </div>
        <div
          class="category"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper small"
            >
              <input
                data-testid="Exit Name"
                name="Exit Name"
                value="Purple"
              />
            </div>
          </div>
        </div>
        <span
          class="fe-x remove_icon"
          data-testid="remove-case-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`CaseElement update handles multiple argument change 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="kase has_number_between"
        data-draggable="true"
      >
        <span
          class="fe-chevrons-expand dnd_icon"
          data-draggable="true"
        />
        <div
          class="choice"
        >
          <div
            class="small "
          >
            <temba-select
              data-testid="temba_select_operator"
              errors="[]"
              expressions=""
              name="operator"
              namekey="verboseName"
              valuekey="type"
              values="[{\\"type\\":\\"has_number_between\\",\\"verboseName\\":\\"has a number between\\",\\"operands\\":2}]"
            />
          </div>
        </div>
        <div
          class="multi_operand"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper small"
            >
              <input
                data-testid="arguments"
                name="arguments"
                value="1"
              />
            </div>
          </div>
          <span
            class="divider"
            data-draggable="true"
          >
            and
          </span>
          <div
            class="ele"
          >
            <div
              class="wrapper small"
            >
              <input
                data-testid="arguments"
                name="arguments"
                value="100"
              />
            </div>
          </div>
        </div>
        <div
          class="categorize_as"
          data-draggable="true"
        >
          categorize as
        </div>
        <div
          class="category"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper small"
            >
              <input
                data-testid="Exit Name"
                name="Exit Name"
                value="1 - 100"
              />
            </div>
          </div>
        </div>
        <span
          class="fe-x remove_icon"
          data-testid="remove-case-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
        />
      </div>
    </div>
  </div>
</body>
`;
